Use java 8 compatible method